# cyd-photo-frame

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml  cyd-photo-frame-scaffold.md  main.py  platformio.ini  pyproject.toml  secrets.h.example  skills-lock.json
.agents/rules/: context-mode-rules.md  cyd-weather-station-first.md
.github/workflows/: test.yaml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
config/: config.h
include/: app_state.h  backlight_fader.h  catppuccin.h  file_cache.h  hardware_logic.h  led_manager.h  lv_conf.h  lvgl_manager.h  mqtt_manager.h  screenshot_manager.h  secrets.h.example  slideshow_timer.h  touch_handler.h  touch_manager.h  wifi_manager.h
scripts/: capture-screenshots.sh  convert-screenshots.py  convert_screenshots.py  prepare_images.py
src/: catppuccin.cpp  file_cache.cpp  hardware_logic.cpp  led_manager.cpp  lvgl_manager.cpp  main.cpp  mqtt_manager.cpp  screenshot_manager.cpp  slideshow_timer.cpp  touch_handler.cpp  touch_manager.cpp  wifi_manager.cpp
tests/mocks/: Arduino.h  Preferences.h  lvgl.h
tests/test_backlight_fader/: test_backlight_fader.cpp
tests/test_catppuccin/: test_catppuccin.cpp
tests/test_file_cache/: test_file_cache.cpp
tests/test_hardware_logic/: test_hardware_logic.cpp
tests/test_led_manager/: test_led_manager.cpp
tests/test_lvgl_manager/: test_lvgl_manager.cpp
tests/test_slideshow_timer/: test_slideshow_timer.cpp
tests/test_touch_handler/: test_touch_handler.cpp
tests/test_touch_manager/: test_touch_manager.cpp
(+10 files in other folders)
